[metadata]
name = filabres
version = attr:filabres.__version__
author = Nicolás Cardiel
author_email = cardiel@ucm.es
url = https://github.com/nicocardiel/filabres
license = GPLv3
license_files =
    LICENSE.txt
description = Data Reduction Package for CAHA instruments
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires =
    setuptools>=39.2
    numpy
    astropy
    scipy
    matplotlib
    python-dateutil
    PyYaml

[options.package_data]
filabres.instrument =
    configuration_cafos.yaml
    configuration_lsss.yaml
filabres.astromatic =
    default.param
    config.sex
    config.scamp

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts = 
    filabres = filabres.filabres:main
    filabres-rotate_flipstat = filabres.tools.rotate_flipstat:main
    filabres-version = filabres.version:main
    filabres-ximshow = filabres.ximshow:main
